<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_item_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="com.example.watertraining.view.AddEntrenamiento">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDistancia"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/distancia"
            android:layout_weight="1"
            android:hint="@string/distancia"
            android:maxLines="1"
            android:digits="0123456789."/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/tiempo_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTiempo"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:focusable="auto"
            android:id="@+id/tiempo"
            android:layout_weight="1"
            android:hint="@string/tiempo_min"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="right|center_vertical">

        <Button
            android:text="@string/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelar"
            android:layout_weight="1" />

        <Button
            android:text="@string/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGuardar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>